--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
+    "babel-plugin-dotenv": "^0.1.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.18",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
@@ -29,7 +31,8 @@
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
