--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "hunt",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
@@ -26,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.15.6",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
