--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "hunt",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
@@ -28,15 +27,16 @@
     "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "^1.15.6",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.73.0",
     "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
