--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
@@ -21,14 +22,18 @@
     "babel-plugin-dotenv": "^0.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.18",
+    "expo-image-picker": "~15.0.7",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "1.14.0",
+    "react-native-pager-view": "^6.3.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
@@ -37,6 +42,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@types/react-native": "^0.73.0",
     "metro-react-native-babel-preset": "^0.77.0"
   },
