--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "WRITE_EXTERNAL_STORAGE",
+        "ACCESS_FINE_LOCATION"  
       ]
     },
     "web": {
@@ -38,6 +39,12 @@
         "expo-image-picker",
         {
           "photosPermission": "The app needs access to your photos to let you share them with your friends."
+        }
+      ],
+      [
+        "expo-location",  
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow History Hunt to access your location."
         }
       ]
     ]
