--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.18",
     "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
@@ -32,7 +33,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "^1.14.0",
+    "react-native-maps": "^1.17.3",
     "react-native-pager-view": "^6.3.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
