--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-native-firebase/firestore": "^20.1.0",
@@ -21,7 +21,7 @@
     "@react-navigation/stack": "^6.4.0",
     "babel-plugin-dotenv": "^0.1.1",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~51.0.18",
+    "expo": "~51.0.28",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
     "expo-permissions": "^14.4.0",
@@ -29,13 +29,13 @@
     "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "^1.17.3",
-    "react-native-pager-view": "^6.3.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-maps": "1.14.0",
+    "react-native-pager-view": "^6.3.0",
+    "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
