--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^20.3.0",
     "@react-native-firebase/auth": "^20.1.0",
@@ -27,16 +31,20 @@
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.3",
+    "marker": "^0.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-image-picker": "^7.1.2",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "0.31.1",
     "react-native-pager-view": "^6.3.0",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
