--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-svg": "^15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-camera": "~15.0.14",
+    "expo-image": "~1.12.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
